src/main/java/pocket/antlr/PocketParser.java
// Generated from PocketParser.g4 by ANTLR 4.13.2
package pocket.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PocketParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LEFT_PAREN=1, RIGHT_PAREN=2, LEFT_BRACKET=3, RIGHT_BRACKET=4, LEFT_BRACE=5, 
		RIGHT_BRACE=6, COLON=7, COMMA=8, SEMICOLON=9, EQUALS=10, ARROW=11, FAT_ARROW=12, 
		PLUS=13, MINUS=14, ASTERISK=15, SLASH=16, PERCENT=17, NOT=18, AND=19, 
		OR=20, CARET=21, TILDE=22, AMPERSAND=23, BAR=24, EQUAL_EQUALS=25, NOT_EQUALS=26, 
		LESS_THAN=27, LESS_THAN_EQUALS=28, GREATER_THAN=29, GREATER_THAN_EQUALS=30, 
		DOT=31, VAL=32, LET=33, IF=34, ELSE=35, LOOP=36, TRADE=37, IMPORT=38, 
		EXPORT=39, BREAK=40, YIELD=41, NATIVE=42, LIST=43, OBJECT=44, TYPE=45, 
		NONE=46, TRUE=47, FALSE=48, INT_LITERAL=49, FLOAT_LITERAL=50, STRING_LITERAL=51, 
		ID=52, WHITE_SPACE=53, LINE_COMMENT=54, BLOCK_COMMENT=55;
	public static final int
		RULE_moduleFn = 0, RULE_pipeOp = 1, RULE_logicOrOp = 2, RULE_logicAndOp = 3, 
		RULE_equalityOp = 4, RULE_relationalOp = 5, RULE_additiveOp = 6, RULE_multiplicativeOp = 7, 
		RULE_unaryOp = 8, RULE_decl = 9, RULE_destructuringList = 10, RULE_stmt = 11, 
		RULE_expr = 12, RULE_pipeExpr = 13, RULE_logicOrExpr = 14, RULE_logicAndExpr = 15, 
		RULE_equalityExpr = 16, RULE_relationalExpr = 17, RULE_additiveExpr = 18, 
		RULE_multiplicativeExpr = 19, RULE_unaryExpr = 20, RULE_tupleItemList = 21, 
		RULE_listItemList = 22, RULE_objectItemList = 23, RULE_primaryExpr = 24, 
		RULE_postfixExpr = 25, RULE_postfixPart = 26, RULE_argList = 27, RULE_param = 28, 
		RULE_paramList = 29, RULE_lambda = 30, RULE_targetPath = 31, RULE_type = 32, 
		RULE_typeList = 33, RULE_objectTypeList = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"moduleFn", "pipeOp", "logicOrOp", "logicAndOp", "equalityOp", "relationalOp", 
			"additiveOp", "multiplicativeOp", "unaryOp", "decl", "destructuringList", 
			"stmt", "expr", "pipeExpr", "logicOrExpr", "logicAndExpr", "equalityExpr", 
			"relationalExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", 
			"tupleItemList", "listItemList", "objectItemList", "primaryExpr", "postfixExpr", 
			"postfixPart", "argList", "param", "paramList", "lambda", "targetPath", 
			"type", "typeList", "objectTypeList"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'['", "']'", "'{'", "'}'", "':'", "','", "';'", 
			"'='", "'->'", "'=>'", "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", 
			"'||'", "'^'", "'~'", "'&'", "'|'", "'=='", "'!='", "'<'", "'<='", "'>'", 
			"'>='", "'.'", "'val'", "'let'", "'if'", "'else'", "'loop'", "'trade'", 
			"'import'", "'export'", "'break'", "'yield'", "'native'", "'list'", "'object'", 
			"'type'", "'None'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LEFT_PAREN", "RIGHT_PAREN", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_BRACE", 
			"RIGHT_BRACE", "COLON", "COMMA", "SEMICOLON", "EQUALS", "ARROW", "FAT_ARROW", 
			"PLUS", "MINUS", "ASTERISK", "SLASH", "PERCENT", "NOT", "AND", "OR", 
			"CARET", "TILDE", "AMPERSAND", "BAR", "EQUAL_EQUALS", "NOT_EQUALS", "LESS_THAN", 
			"LESS_THAN_EQUALS", "GREATER_THAN", "GREATER_THAN_EQUALS", "DOT", "VAL", 
			"LET", "IF", "ELSE", "LOOP", "TRADE", "IMPORT", "EXPORT", "BREAK", "YIELD", 
			"NATIVE", "LIST", "OBJECT", "TYPE", "NONE", "TRUE", "FALSE", "INT_LITERAL", 
			"FLOAT_LITERAL", "STRING_LITERAL", "ID", "WHITE_SPACE", "LINE_COMMENT", 
			"BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PocketParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PocketParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleFnContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PocketParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ModuleFnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleFn; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterModuleFn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitModuleFn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitModuleFn(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleFnContext moduleFn() throws RecognitionException {
		ModuleFnContext _localctx = new ModuleFnContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_moduleFn);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(70);
					stmt();
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8895547293581354L) != 0)) {
				{
				setState(76);
				expr();
				}
			}

			setState(79);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PipeOpContext extends ParserRuleContext {
		public TerminalNode ARROW() { return getToken(PocketParser.ARROW, 0); }
		public PipeOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pipeOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterPipeOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitPipeOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitPipeOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PipeOpContext pipeOp() throws RecognitionException {
		PipeOpContext _localctx = new PipeOpContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pipeOp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(ARROW);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicOrOpContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(PocketParser.OR, 0); }
		public LogicOrOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicOrOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterLogicOrOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitLogicOrOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitLogicOrOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicOrOpContext logicOrOp() throws RecognitionException {
		LogicOrOpContext _localctx = new LogicOrOpContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_logicOrOp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(OR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicAndOpContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(PocketParser.AND, 0); }
		public LogicAndOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicAndOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterLogicAndOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitLogicAndOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitLogicAndOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicAndOpContext logicAndOp() throws RecognitionException {
		LogicAndOpContext _localctx = new LogicAndOpContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logicAndOp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(AND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EqualityOpContext extends ParserRuleContext {
		public TerminalNode EQUAL_EQUALS() { return getToken(PocketParser.EQUAL_EQUALS, 0); }
		public TerminalNode NOT_EQUALS() { return getToken(PocketParser.NOT_EQUALS, 0); }
		public EqualityOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equalityOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterEqualityOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitEqualityOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitEqualityOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualityOpContext equalityOp() throws RecognitionException {
		EqualityOpContext _localctx = new EqualityOpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_equalityOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_la = _input.LA(1);
			if ( !(_la==EQUAL_EQUALS || _la==NOT_EQUALS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RelationalOpContext extends ParserRuleContext {
		public TerminalNode LESS_THAN() { return getToken(PocketParser.LESS_THAN, 0); }
		public TerminalNode GREATER_THAN() { return getToken(PocketParser.GREATER_THAN, 0); }
		public TerminalNode LESS_THAN_EQUALS() { return getToken(PocketParser.LESS_THAN_EQUALS, 0); }
		public TerminalNode GREATER_THAN_EQUALS() { return getToken(PocketParser.GREATER_THAN_EQUALS, 0); }
		public RelationalOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationalOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterRelationalOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitRelationalOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitRelationalOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationalOpContext relationalOp() throws RecognitionException {
		RelationalOpContext _localctx = new RelationalOpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_relationalOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 2013265920L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdditiveOpContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(PocketParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(PocketParser.MINUS, 0); }
		public AdditiveOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additiveOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterAdditiveOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitAdditiveOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitAdditiveOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdditiveOpContext additiveOp() throws RecognitionException {
		AdditiveOpContext _localctx = new AdditiveOpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_additiveOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiplicativeOpContext extends ParserRuleContext {
		public TerminalNode ASTERISK() { return getToken(PocketParser.ASTERISK, 0); }
		public TerminalNode SLASH() { return getToken(PocketParser.SLASH, 0); }
		public TerminalNode PERCENT() { return getToken(PocketParser.PERCENT, 0); }
		public MultiplicativeOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicativeOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterMultiplicativeOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitMultiplicativeOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitMultiplicativeOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicativeOpContext multiplicativeOp() throws RecognitionException {
		MultiplicativeOpContext _localctx = new MultiplicativeOpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_multiplicativeOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 229376L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnaryOpContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(PocketParser.NOT, 0); }
		public TerminalNode MINUS() { return getToken(PocketParser.MINUS, 0); }
		public UnaryOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterUnaryOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitUnaryOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitUnaryOp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryOpContext unaryOp() throws RecognitionException {
		UnaryOpContext _localctx = new UnaryOpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_unaryOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_la = _input.LA(1);
			if ( !(_la==MINUS || _la==NOT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclContext extends ParserRuleContext {
		public TerminalNode VAL() { return getToken(PocketParser.VAL, 0); }
		public TerminalNode LET() { return getToken(PocketParser.LET, 0); }
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			_la = _input.LA(1);
			if ( !(_la==VAL || _la==LET) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DestructuringListContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(PocketParser.LEFT_BRACKET, 0); }
		public TerminalNode RIGHT_BRACKET() { return getToken(PocketParser.RIGHT_BRACKET, 0); }
		public List<TerminalNode> ID() { return getTokens(PocketParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(PocketParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PocketParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PocketParser.COMMA, i);
		}
		public DestructuringListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destructuringList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).enterDestructuringList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PocketParserListener ) ((PocketParserListener)listener).exitDestructuringList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PocketParserVisitor ) return ((PocketParserVisitor<? extends T>)visitor).visitDestructuringList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DestructuringListContext destructuringList() throws RecognitionException {
		DestructuringListContext _localctx = new DestructuringListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_destructuringList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(LEFT_BRACKET);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(100);
				match(ID);
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(101);
					match(COMMA);
					setState(102);
					match(ID);
					}
					}
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(110);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
